Pin rickshaw to v1.5.1
Fixes:
Unable to find a suitable version for d3, please choose one by typing one of the numbers below:
    1) d3#~3.4.5 which resolved to 3.4.13 and is required by autonavx_web
    2) d3#~3.5.5 which resolved to 3.5.17 and is required by rickshaw#2cc32767d9

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "ace": "~1.1.1",
     "mathjs": "0.21.0",
     "d3": "~3.4.5",
-    "rickshaw": "master",
+    "rickshaw": "v1.5.1",
     "requirejs-text": "~2.0.12",
     "autonavx_skulpt": "https://github.com/eosrei/autonavx_skulpt.git#master"
   }
